--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.19",
     "concurrently": "^3.6.1",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
@@ -39,7 +38,6 @@
     "rimraf": "^2.6.2",
     "style-loader": "^0.21.0",
     "webpack": "^4.9.1",
-    "webpack-cli": "^2.1.4",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-cli": "^2.1.4"
   }
 }
