--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.9.2",
     "nodemon": "^1.17.5",
     "rimraf": "^2.6.2",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.9.1",
     "webpack-cli": "^2.1.4"
